Made initial changes

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,20 @@ openai>=0.27.2
 nltk>=3.8.1
 kaleido>=0.2.1
 plotly
+seaborn
+torch
+transformer-lens
+numpy>=1.22.1
+pandas>=1.4.4
+jaxtyping>=0.2.14
+prettytable>=3.6.0
+openai>=0.27.2
+nltk>=3.8.1
+kaleido>=0.2.1
+pytest
+plotly
+nbformat
+Ipython
+ipywidgets
+datasets
+transformers
